UI related fixes
1. reduced calls of the configureUI funnction
2. added proper size css for window-decorator
3. added float default for all controls: ['top', 'left']
4. Resolved bug where config was altered without copying. Fixes #24

--- a/less/controlgenerics.less
+++ b/less/controlgenerics.less
@@ -2,6 +2,8 @@
 // standard styling for all buttons
 // and mixins for further specifying the type of the button
 
+@import "./colors";
+
 .ol-control {
   cursor: default;
 
