--- a/less/languageControls.less
+++ b/less/languageControls.less
@@ -47,8 +47,6 @@
       text-align: center;
       text-transform: uppercase;
       font-size: @g4u-mobile-normal-fontsize;
-    }
-    button {
       display: none;
     }
 
@@ -59,9 +57,8 @@
     padding: 0;
     margin: 0;
 
-    li {
+    .g4u-dropdown-entry {
       cursor: default;
-      list-style: none;
       padding: @g4u-mobile-padding;
       background: white;
       color: black;
