Dropdown window interaction

--- a/less/dropdown.less
+++ b/less/dropdown.less
@@ -73,3 +73,24 @@
     }
   }
 }
+
+.g4u-mobile {
+  .g4u-dropdown {
+    display: block !important;
+  }
+
+  padding: 0;
+  margin: 0;
+
+  .g4u-dropdown-entry {
+    cursor: default;
+    padding: @g4u-mobile-padding;
+    background: white;
+    color: black;
+  }
+
+  .g4u-dropdown-selected {
+    background: @g4u-dark-main-color;
+    color: white;
+  }
+}
