Makes dropdown scrollable (#15)

--- a/less/searchcontrol.less
+++ b/less/searchcontrol.less
@@ -123,12 +123,17 @@
     .g4u-dropdown {
       overflow: hidden;
 
+      position: relative;
+      top: 0;
+
       button {
+        text-align: left;
         margin-top: @g4u-mobile-padding;
         cursor: default;
         padding: @g4u-mobile-padding;
         background: white;
         color: black;
+        white-space: normal;
       }
 
       button.g4u-dropdown-ghostentry {
