--- a/less/dropdown.less
+++ b/less/dropdown.less
@@ -26,18 +26,21 @@
 
     .g4u-dropdown-entry {
       width: 100%;
+      height: auto;
 
       cursor: pointer;
       background: white;
       color: black;
       .g4u-desktop-text-padding;
       padding-bottom: 0;
-      padding-top: 0;
+      //padding-top: 0;
+      padding-top: @g4u-desktop-padding;
 
       &:not(:last-of-type) {
       }
 
       &:first-of-type {
+        padding-top: 0;
         border-top-left-radius: @g4u-desktop-small-border-radius;
         border-top-right-radius: @g4u-desktop-small-border-radius;
       }
@@ -83,6 +86,7 @@
   margin: 0;
 
   .g4u-dropdown-entry {
+    height: auto;
     cursor: default;
     padding: @g4u-mobile-padding;
     background: white;
