--- a/less/mobilecontrols.less
+++ b/less/mobilecontrols.less
@@ -34,8 +34,6 @@
           .g4u-control-mainbutton {
             border-top-left-radius: @g4u-mobile-small-border-radius;
             border-bottom-left-radius: @g4u-mobile-small-border-radius;
-
-            margin-left: 0;
           }
         }
         .g4u-mobilecontrols-item-last {
@@ -49,14 +47,24 @@
       .g4u-mobilecontrols-item {
         pointer-events: auto;
         display: inline-block;
+        margin-left: @g4u-mobile-padding;
+        padding: 0;
+        display: inline-block;
+        width: @g4u-mobile-button-size;
+        height: @g4u-mobile-button-size;
+        &.g4u-mobilecontrols-item-first {
+          margin-left: 0;
+        }
+      }
+
+      a > button {
+        top: -1px;
       }
 
       .shift-button() {
         vertical-align: text-top;
 
         background-color: @g4u-medium-main-color;
-
-        margin-left: @g4u-mobile-padding;
 
         padding: 0;
         display: inline-block;
