Updated shield to work properly with module-urlapi

--- a/less/map.less
+++ b/less/map.less
@@ -10,6 +10,10 @@ a {
   background: transparent;
 }
 
+.ol-viewport {
+  z-index: 0;
+}
+
 .g4u-desktop {
   .ol-overlaycontainer-stopevent > div.ol-control {
     // ol.controls which are direct childs of the overlay container have grey background
