Added toolbox-item width

--- a/less/toolbox.less
+++ b/less/toolbox.less
@@ -23,6 +23,7 @@
     border-radius: @g4u-desktop-large-border-radius;
     //overflow: hidden;
     .g4u-toolbox-item {
+      width: @g4u-desktop-button-size;
       display: inline-block;
       padding-left: @g4u-desktop-padding;
       vertical-align: text-top;
