--- a/less/dropdown.less
+++ b/less/dropdown.less
@@ -32,15 +32,13 @@
       background: white;
       color: black;
       .g4u-desktop-text-padding;
-      padding-bottom: 0;
-      //padding-top: 0;
-      padding-top: @g4u-desktop-padding;
+      padding-top: @g4u-desktop-padding / 2;
+      padding-bottom: @g4u-desktop-padding / 2;
 
       &:not(:last-of-type) {
       }
 
       &:first-of-type {
-        padding-top: 0;
         border-top-left-radius: @g4u-desktop-small-border-radius;
         border-top-right-radius: @g4u-desktop-small-border-radius;
       }
@@ -80,6 +78,7 @@
 .g4u-mobile {
   .g4u-dropdown {
     display: block !important;
+    width: 100%;
   }
 
   padding: 0;
@@ -94,7 +93,7 @@
   }
 
   .g4u-dropdown-selected {
-    background: @g4u-dark-main-color;
+    background: @g4u-medium-main-color;
     color: white;
   }
 }
