--- a/less/layerselector.less
+++ b/less/layerselector.less
@@ -25,14 +25,15 @@
     // title
 
     .g4u-layerselector-titlebutton {
+      .buttonWithIconBefore(@g4u-layerselector-group-collapsed-icon; @g4u-desktop-button-size; @g4u-desktop-normal-fontsize);
+      padding-left: @g4u-desktop-button-size + 2 * @g4u-desktop-padding;
       margin-top: 0;
       background: @g4u-titlebutton-color;
-      .buttonWithIconBefore(@g4u-layerselector-group-collapsed-icon; @g4u-desktop-button-size; @g4u-desktop-normal-fontsize);
       border-top-right-radius: @g4u-desktop-small-border-radius;
       border-top-left-radius: @g4u-desktop-small-border-radius;
     }
 
-    &.g4u-layerselector-collapsed {
+    .g4u-layerselector-collapsed {
       .g4u-layerselector-titlebutton {
         .changeIconBefore(@g4u-layerselector-group-expanded-icon);
         border-bottom-right-radius: @g4u-desktop-small-border-radius;
@@ -49,31 +50,32 @@
       height: @g4u-desktop-button-size;
     }
 
-    .g4u-layerselector-menu-collapsebutton {
+    // seperate collapse and title button
+    .g4u-layerselector-menu-collapsebutton:not(.g4u-layerselector-menu-titlebutton) {
       .buttonSquaredWithIcon(@g4u-layerselector-menu-expanded-icon; @g4u-desktop-button-size; @g4u-desktop-normal-fontsize);
       position: absolute;
       top: 0;
       left: 0;
-
-      &.g4u-layerselector-menu-active {
-        background: @g4u-active-normal-button-color; // k
-        &:hover {
-          background: @g4u-active-hover-button-color; // k
-        }
-      }
     }
 
-    .g4u-layerselector-menu-collapsed {
-      .g4u-layerselector-menu-collapsebutton {
-        .changeIconBefore(@g4u-layerselector-menu-collapsed-icon; @g4u-desktop-normal-fontsize);
-      }
-    }
-
-    .g4u-layerselector-menu-titlebutton {
+    .g4u-layerselector-menu-titlebutton:not(.g4u-layerselector-menu-collapsebutton) {
       position: absolute;
       top: 0;
       left: @g4u-desktop-button-size;
+    }
 
+    // combined buttons
+    .g4u-layerselector-menu-collapsebutton.g4u-layerselector-menu-titlebutton {
+      .buttonWithIconBefore(@g4u-layerselector-menu-expanded-icon; @g4u-desktop-button-size; @g4u-desktop-normal-fontsize);
+      padding-left: @g4u-desktop-button-size + 2 * @g4u-desktop-padding;
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+
+    // apply to both kinds
+    .g4u-layerselector-menu-collapsebutton,
+    .g4u-layerselector-menu-titlebutton {
       &.g4u-layerselector-menu-active {
         background: @g4u-active-normal-button-color; // k
         &:hover {
@@ -88,12 +90,13 @@
       }
     }
 
-    // styling of active buttons
     .g4u-layerselector-layerbutton {
+      .buttonWithIconBefore(@g4u-whitespace-icon; @g4u-desktop-button-size; @g4u-desktop-normal-fontsize);
       margin-top: @g4u-desktop-padding;
       width: @g4u-layermenu-width + 2 * @g4u-desktop-padding;
-      .buttonWithIconBefore(@g4u-whitespace-icon; @g4u-desktop-button-size; @g4u-desktop-normal-fontsize);
+      padding-left: @g4u-desktop-button-size + 2 * @g4u-desktop-padding;
 
+      // styling of active buttons
       &.g4u-layerselector-menu-active {
         background: @g4u-active-normal-button-color; // k
         &:hover {
@@ -163,6 +166,7 @@
     button {
       width: 100%;
       text-align: left;
+      padding-left: 2 * @g4u-desktop-padding;
     }
 
     .g4u-layerselector-content {
@@ -202,7 +206,7 @@
       height: @g4u-mobile-button-size;
     }
 
-    .g4u-layerselector-menu-collapsebutton {
+    .g4u-layerselector-menu-collapsebutton:not(.g4u-layerselector-menu-titlebutton) {
       .buttonSquaredWithIcon(@g4u-layerselector-menu-expanded-icon; @g4u-mobile-button-size; @g4u-mobile-normal-fontsize);
       position: absolute;
       top: 0;
