--- a/less/helpbutton.less
+++ b/less/helpbutton.less
@@ -2,7 +2,7 @@
 @import "./controlgenerics";
 @import "./colors";
 
-@g4u-help-icon: url("../images/icons/help.svg");
+@g4u-help-icon: url("~guide4you-builder/mustache-eval-loader?name=images/[name].[ext]!../images/icons/help.svg");
 
 .g4u-desktop {
   .g4u-helpbutton {
