--- a/less/layerselector.less
+++ b/less/layerselector.less
@@ -2,12 +2,12 @@
 @import "./colors";
 @import "./controlgenerics";
 
-@g4u-layerselector-menu-collapsed-icon: url("../images/icons/expand/plusminus/plus.svg");
-@g4u-layerselector-menu-expanded-icon: url("../images/icons/expand/plusminus/minus.svg");
-@g4u-layerselector-group-collapsed-icon: url("../images/icons/expand/outline/down.svg");
-@g4u-layerselector-group-expanded-icon: url("../images/icons/expand/outline/right.svg");
-@g4u-whitespace-icon: url("../images/icons/expand/plusminus/nothing.svg");
-@g4u-load-animation: url("../images/icons/load-animation.svg");
+@g4u-layerselector-menu-collapsed-icon: url("~guide4you-builder/mustache-eval-loader?name=images/[name].[ext]!../images/icons/expand/plusminus/plus.svg");
+@g4u-layerselector-menu-expanded-icon: url("~guide4you-builder/mustache-eval-loader?name=images/[name].[ext]!../images/icons/expand/plusminus/minus.svg");
+@g4u-layerselector-group-collapsed-icon: url("~guide4you-builder/mustache-eval-loader?name=images/[name].[ext]!../images/icons/expand/outline/down.svg");
+@g4u-layerselector-group-expanded-icon: url("~guide4you-builder/mustache-eval-loader?name=images/[name].[ext]!../images/icons/expand/outline/right.svg");
+@g4u-whitespace-icon: url("~guide4you-builder/mustache-eval-loader?name=images/[name].[ext]!../images/icons/expand/plusminus/nothing.svg");
+@g4u-load-animation: url("~guide4you-builder/mustache-eval-loader?name=images/[name].[ext]!../images/icons/load-animation.svg");
 
 .g4u-desktop {
   .g4u-layerselector.ol-unselectable.ol-control { // TODO: remove unneccessary classes
