--- a/less/arrowbuttons.less
+++ b/less/arrowbuttons.less
@@ -2,7 +2,7 @@
 @import "./colors";
 @import "./controlgenerics";
 
-@g4u-arrowbutton-center-icon: url("~guide4you-builder/mustache-eval-loader?name=images/[name].[ext]!guide4you-builder/mustache-eval-loader?name=images/[name].[ext]!../images/icons/arrow/center.svg");
+@g4u-arrowbutton-center-icon: url("~guide4you-builder/mustache-eval-loader?name=images/[name].[ext]!../images/icons/arrow/center.svg");
 @g4u-arrowbutton-down-icon: url("~guide4you-builder/mustache-eval-loader?name=images/[name].[ext]!../images/icons/arrow/down.svg");
 @g4u-arrowbutton-left-icon: url("~guide4you-builder/mustache-eval-loader?name=images/[name].[ext]!../images/icons/arrow/left.svg");
 @g4u-arrowbutton-right-icon: url("~guide4you-builder/mustache-eval-loader?name=images/[name].[ext]!../images/icons/arrow/right.svg");
