Less changes (icon paths and other) (#113)
* changed icon paths

* added position absolute to all elements on the viewport

* fixed some css, added shift key global

--- a/less/arrowbuttons.less
+++ b/less/arrowbuttons.less
@@ -2,15 +2,14 @@
 @import "./colors";
 @import "./controlgenerics";
 
-@g4u-arrowbutton-center-icon: url("~guide4you-builder/mustache-eval-loader?name=images/[name].[ext]!../images/icons/arrow/center.svg");
-@g4u-arrowbutton-down-icon: url("~guide4you-builder/mustache-eval-loader?name=images/[name].[ext]!../images/icons/arrow/down.svg");
-@g4u-arrowbutton-left-icon: url("~guide4you-builder/mustache-eval-loader?name=images/[name].[ext]!../images/icons/arrow/left.svg");
-@g4u-arrowbutton-right-icon: url("~guide4you-builder/mustache-eval-loader?name=images/[name].[ext]!../images/icons/arrow/right.svg");
-@g4u-arrowbutton-up-icon: url("~guide4you-builder/mustache-eval-loader?name=images/[name].[ext]!../images/icons/arrow/up.svg");
+@g4u-arrowbutton-center-icon: url("~guide4you-builder/mustache-eval-loader?name=images/[name].[ext]!../images/icons/arrow-center.svg");
+@g4u-arrowbutton-down-icon: url("~guide4you-builder/mustache-eval-loader?name=images/[name].[ext]!../images/icons/arrow-down.svg");
+@g4u-arrowbutton-left-icon: url("~guide4you-builder/mustache-eval-loader?name=images/[name].[ext]!../images/icons/arrow-left.svg");
+@g4u-arrowbutton-right-icon: url("~guide4you-builder/mustache-eval-loader?name=images/[name].[ext]!../images/icons/arrow-right.svg");
+@g4u-arrowbutton-up-icon: url("~guide4you-builder/mustache-eval-loader?name=images/[name].[ext]!../images/icons/arrow-up.svg");
 
 .g4u-desktop {
   .g4u-arrowbuttons {
-    position: absolute;
     width: 2 * @g4u-desktop-padding + 3 * @g4u-desktop-button-size;
     height: 2 * @g4u-desktop-padding + 3 * @g4u-desktop-button-size;
     border-radius: @g4u-desktop-large-border-radius;
