chrome width bug

--- a/less/toolbox.less
+++ b/less/toolbox.less
@@ -10,6 +10,7 @@
       display: inline-block;
       padding-left: @g4u-desktop-padding;
       vertical-align: text-top;
+      overflow: hidden; // fixes chrome width bug
     }
 
     .g4u-toolbox-item-first {
