--- a/less/toolbox.less
+++ b/less/toolbox.less
@@ -11,6 +11,10 @@
       padding-left: @g4u-desktop-padding;
       vertical-align: text-top;
       overflow: hidden; // fixes chrome width bug
+
+      > .g4u-window-decorator { // fixes the window display bug resulting from above bugfix
+        position: static;
+      }
     }
 
     .g4u-toolbox-item-first {
