Fix path for search.svg (#50)

--- a/less/searchcontrol.less
+++ b/less/searchcontrol.less
@@ -2,7 +2,7 @@
 @import "~guide4you/less/controlgenerics";
 @import "~guide4you/less/colors";
 
-@g4u-search-icon: url("~guide4you-builder/mustache-eval-loader?name=images/[path].[ext]!../images/search.svg");
+@g4u-search-icon: url("~guide4you-builder/mustache-eval-loader?name=images/[name].[ext]!../images/search.svg");
 
 .g4u-desktop {
   .g4u-search-control-searchbutton {
