now using bootstrap colors for notification

--- a/less/notify.less
+++ b/less/notify.less
@@ -2,6 +2,8 @@
   position: relative;
   min-height: 52px;
   color:#444;
+  border-radius: 5px;
+  border: 1px solid;
 }
 
 .notifyjs-benndorf-base .text {
