Hide mouseposition and fixed position of scale line above attribution

--- a/less/print.less
+++ b/less/print.less
@@ -22,6 +22,7 @@
     .g4u-search-control,
     .g4u-geolocation,
     .g4u-linkgenerator,
+    .g4u-mouseposition,
     .g4u-printbutton,
     .g4u-printmenu-jspdf,
     .g4u-layermenu,
@@ -65,8 +66,8 @@
     }
 
     .g4u-scale-line {
-      border-color: @g4u-dark-main-color !important;
-      border-width: 2 * @g4u-tiny !important;
+      bottom: 5 * @g4u-desktop-padding + @g4u-desktop-button-size !important;
+      border: none;
       background: white !important;
 
       .g4u-scale-line-inner {
