--- a/less/print.less
+++ b/less/print.less
@@ -1,4 +1,8 @@
 @media print {
+  a {
+    color: black !important;
+  }
+
   .g4u-window {
     height: auto !important;
 
@@ -52,10 +56,6 @@
         border-top-left-radius: @g4u-desktop-small-border-radius;
         border-bottom-left-radius: @g4u-desktop-small-border-radius;
         margin: 0 !important;
-      }
-
-      a {
-        color: #900 !important;
       }
     }
 
