--- a/less/windowdecorator.less
+++ b/less/windowdecorator.less
@@ -4,8 +4,12 @@
 
 .g4u-desktop {
   .g4u-window-decorator {
-    display:inline-block;
+    display: inline-block;
     position: relative;
+  }
+
+  .ol-overlaycontainer-stopevent > .g4u-window-decorator {
+    position: absolute;
   }
 
   .g4u-windowed-control {
