--- a/less/print.less
+++ b/less/print.less
@@ -7,7 +7,7 @@
     height: auto !important;
 
     .g4u-window-button-close {
-      display: none;
+      display: none !important;
     }
 
     .g4u-window-content {
