Added @g4u-text-color less variable
For this change the less configs of every configuration have to be updated

--- a/conf/full/clouds.less
+++ b/conf/full/clouds.less
@@ -20,3 +20,5 @@
 @g4u-active-hover-button-color: rgb( 41, 171, 226);
 
 @g4u-link-color: lighten(@g4u-medium-main-color, 10%);
+
+@g4u-text-color: white;
