--- a/less/attribution.less
+++ b/less/attribution.less
@@ -16,7 +16,7 @@
     white-space: nowrap;
 
     a {
-      color: darken(@g4u-theme-main-foreground, 15%);
+      color: darken(@g4u-text-color, 15%);
     }
 
     .g4u-has-tooltip {
