--- a/less/scaleline.less
+++ b/less/scaleline.less
@@ -23,7 +23,7 @@
       background: transparent;
       font-size: round((2* @g4u-desktop-normal-fontsize - @g4u-desktop-ruler-linewidth) / 2);
       text-align: center;
-      border: @g4u-desktop-ruler-linewidth solid @g4u-theme-main-foreground;
+      border: @g4u-desktop-ruler-linewidth solid @g4u-text-color;
       border-top: none;
     }
   }
