+image for help on home button

--- a/less/map.less
+++ b/less/map.less
@@ -160,7 +160,7 @@ a {
   }
 
   background: white;
-  font-family: sans-serif;
+  font-family: @g4u-text-fonts;
   margin: 0;
 
   [role=tooltip] {
