--- a/conf/clouds.less
+++ b/conf/clouds.less
@@ -20,3 +20,5 @@
 @g4u-active-hover-button-color: rgb( 41, 171, 226);
 
 @g4u-link-color: lighten(@g4u-medium-main-color, 10%);
+
+@g4u-text-color: white;
