hotfix: buttons for selecting a layer now grow in height when line break occurs

--- a/less/layerselector.less
+++ b/less/layerselector.less
@@ -92,6 +92,8 @@
 
     .g4u-layerselector-layerbutton {
       .buttonWithIconBefore(@g4u-whitespace-icon; @g4u-desktop-button-size; @g4u-desktop-normal-fontsize);
+      height: auto; // hotfix
+      min-height: @g4u-desktop-button-size; // hotfix
       margin-top: @g4u-desktop-padding;
       width: @g4u-layermenu-width + 2 * @g4u-desktop-padding;
       padding-left: @g4u-desktop-button-size + 2 * @g4u-desktop-padding;
