--- a/less/layerselector.less
+++ b/less/layerselector.less
@@ -97,6 +97,8 @@
       margin-top: @g4u-desktop-padding;
       width: @g4u-layermenu-width + 2 * @g4u-desktop-padding;
       padding-left: @g4u-desktop-button-size + 2 * @g4u-desktop-padding;
+      padding-top: @g4u-desktop-padding;
+      padding-bottom: @g4u-desktop-padding;
 
       // styling of active buttons
       &.g4u-layerselector-menu-active {
@@ -240,6 +242,10 @@
     .g4u-layerselector-layerbutton {
       margin-top: @g4u-mobile-padding;
       .buttonWithIconBefore(@g4u-whitespace-icon; @g4u-mobile-button-size; @g4u-mobile-normal-fontsize);
+      height: auto; // hotfix
+      min-height: @g4u-mobile-button-size; // hotfix
+      padding-top: @g4u-mobile-padding;
+      padding-bottom: @g4u-mobile-padding;
       &.g4u-layerselector-menu-active {
         background: @g4u-active-normal-button-color;
       }
